--- a/modules/organizations/client/views/view-organization.client.view.html
+++ b/modules/organizations/client/views/view-organization.client.view.html
@@ -6,112 +6,85 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <h3 class="panel-title">Edit Organization</h3>
+                <h3 class="panel-title">View Organization</h3>
             </div>
 
             <div class="panel-body">
 
-                <form name="organizationForm" ng-submit="editOrganization.updateOrganization(organizationForm.$valid)" novalidate>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group show-errors">
+                                <label for="company" class="control-label">Company (Doing Business As)</label>
+                                <p id="company" ng-bind="viewOrganization.organization.company" />
+                            </div>
 
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group show-errors">
-                                        <label for="company" class="control-label">Company (Doing Business As)</label>
-                                        <input type="text" id="company" name="company" class="form-control" ng-model="editOrganization.organization.company" placeholder="Company (Doing Business As)" required />
-                                        <div ng-messages="organizationForm.company.$error" role="alert">
-                                            <p class="help-block error-text" ng-message="required">Company is required.</p>
-                                        </div>
-                                    </div>
+                            <div class="form-group show-errors">
+                                <label for="website" class="control-label">Website</label>
+                                <p id="website" ng-bind="viewOrganization.organization.website"></p>
+                            </div>
 
-                                    <div class="form-group show-errors">
-                                        <label for="website" class="control-label">Website</label>
-                                        <input type="text" id="website" name="website" class="form-control" ng-model="editOrganization.organization.website" placeholder="Website" required />
-                                        <div ng-messages="organizationForm.website.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="companyLegal" class="control-label">Company Legal Name</label>
-                                        <input type="text" id="companyLegal" name="companyLegal" class="form-control" ng-model="editOrganization.organization.companyLegal" placeholder="Company Legal Name" required />
-                                        <div ng-messages="organizationForm.companyLegal.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="registeredIn" class="control-label">Registered In</label>
-                                        <select class="form-control input-sm" ng-model="editOrganization.organization.registeredIn" ng-options="key as value for (key, value) in editOrganization.provs"></select>
-                                        <div ng-messages="organizationForm.registeredIn.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="parentCompany" class="control-label">Parent Company (if applicable)</label>
-                                        <input type="text" id="parentCompany" name="parentCompany" class="form-control" ng-model="editOrganization.organization.parentCompany" placeholder="Parent Company (if applicable)" required />
-                                        <div ng-messages="organizationForm.parentCompany.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="companyType" class="control-label">Company Type</label>
-                                        <select id="companytype" ng-model='uco.type' class="form-control input-sm">
-                                            <option value="public">Publically Traded</option>
-                                            <option value="private">Privately Owned</option>
-                                        </select>
-                                        <div ng-messages="organizationForm.companyType.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="address1" class="control-label">Address (Line 1)</label>
-                                        <input type="text" id="address1" name="address1" class="form-control" ng-model="editOrganization.organization.address1" placeholder="Address (Line 1)" required />
-                                        <div ng-messages="organizationForm.address1.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="address2" class="control-label">Address (Line 2)</label>
-                                        <input type="text" id="address2" name="address2" class="form-control" ng-model="editOrganization.organization.address2" placeholder="Address (Line 2)" required />
-                                        <div ng-messages="organizationForm.address2.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="city" class="control-label">City</label>
-                                        <input type="text" id="city" name="city" class="form-control" ng-model="editOrganization.organization.city" placeholder="City" required />
-                                        <div ng-messages="organizationForm.city.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="province" class="control-label">Province</label>
-                                        <select class="form-control input-sm" ng-model="editOrganization.organization.province" ng-options="key as value for (key, value) in editOrganization.provs"></select>
-                                        <div ng-messages="organizationForm.province.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="postal" class="control-label">Postal</label>
-                                        <input type="text" id="postal" name="postal" class="form-control" ng-model="editOrganization.organization.postal" placeholder="Postal" required />
-                                        <div ng-messages="organizationForm.postal.$error" role="alert">
-                                        </div>
-                                    </div>
-
-
-                                </div>
+                            <div class="form-group show-errors">
+                                <label for="companyLegal" class="control-label">Company Legal Name</label>
+                                <p id="companyLegal" ng-bind="viewOrganization.organization.companyLegal"></p>
 
                             </div>
 
+                            <div class="form-group show-errors">
+                                <label for="registeredIn" class="control-label">Registered In</label>
+                                <p id="registeredIn" ng-bind="viewOrganization.organization.registeredIn"></p>
 
-                            <div class="text-right">
-                                <div class="form-group">
-                                    <input type="submit" value="Update Organization" class="btn btn-default" >
-                                </div>
-
-                                <div ng-show="error" class="text-danger">
-                                    <strong ng-bind="error"></strong>
-                                </div>
                             </div>
-                </form>
+
+                            <div class="form-group show-errors">
+                                <label for="parentCompany" class="control-label">Parent Company (if applicable)</label>
+                                <p id="parentCompany" ng-bind="viewOrganization.organization.parentCompany"></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="companyType" class="control-label">Company Type</label>
+                                <p id="companyType" ng-bind='viewOrganization.organization.companyType'></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="address1" class="control-label">Address (Line 1)</label>
+                                <p id="address1" ng-bind="viewOrganization.organization.address1"></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="address2" class="control-label">Address (Line 2)</label>
+                                <p id="address2" ng-bind="viewOrganization.organization.address2"></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="city" class="control-label">City</label>
+                                <p id="city" ng-bind="viewOrganization.organization.city"></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="province" class="control-label">Province</label>
+                                <p id="province" ng-bind="viewOrganization.organization.province"></p>
+
+                            </div>
+
+                            <div class="form-group show-errors">
+                                <label for="postal" class="control-label">Postal</label>
+                                <p id="postal" ng-bind="viewOrganization.organization.postal"></p>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="text-right">
+                        <div class="form-group">
+                            <input type="submit" value="Edit Organization" class="btn btn-default" ui-sref="edit({organizationId: viewOrganization.organization._id})">
+                        </div>
+                    </div>
 
             </div>
         </div>
