--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -16,9 +16,15 @@
 
 		<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
 
+
+<embed height="800" width="100%" src="https://msit.powerbi.com/view?r=eyJrIjoiOWNkOWNiMTktMTA0Ni00Zjc2LWE0ODItZGU0NWRjOGYyOWRlIiwidCI6IjcyZjk4OGJmLTg2ZjEtNDFhZi05MWFiLTJkN2NkMDExZGI0NyIsImMiOjV9&showLogoBar=false">
+
 		<div x-window-height>
 			<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>			
 		</div>
+
+
+
 
 	</div>
 	<div class='col-sm-2'>
