Organizations Module - using directive to create common view/edit form.

--- a/modules/organizations/client/views/list-organizations.client.view.html
+++ b/modules/organizations/client/views/list-organizations.client.view.html
@@ -32,6 +32,11 @@
           </table>
 
         <div class="text-right">
+
+          <div class="form-group">
+            <input type="button" value="Add Organization" class="btn btn-default btn-sm" ui-sref="new">
+          </div>
+
           <pagination class="pagination-sm" boundary-links="true" max-size="8" items-per-page="itemsPerPage" total-items="filterLength" ng-model="currentPage" ng-change="pageChanged()"></pagination>
         </div>
 
