--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -1,4 +1,4 @@
-<section id="menu-side" style="position: fixed;">
+<section id="menu-side" class="menu-side" style="position: fixed;">
 <!--
 <div class="container" ng-controller="HeaderController">
   <div class="navbar-header">
