--- a/modules/configuration/client/views/partials/manage-phases.html
+++ b/modules/configuration/client/views/partials/manage-phases.html
@@ -79,15 +79,11 @@
 
                     </div>
 
-                    <div class="form-group" ng-if="configDataElement.activeRecordNew">
-                        <button class="btn btn-primary" ng-click="configDataElement.addRecord()">Add</button>
+                    <div class="form-group">
+                        <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
                         <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>
                     </div>
 
-                    <div ng-if="!configDataElement.activeRecordNew">
-                        <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
-                        <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>                        
-                    </div>
                 </div>
             </div>
         </div>
