--- a/modules/configuration/client/views/partials/manage-tasks.html
+++ b/modules/configuration/client/views/partials/manage-tasks.html
@@ -44,15 +44,12 @@
                         <textarea class="form-control" ng-model="configDataElement.activeRecord.description">{{ configDataElement.activeRecord.description }}</textarea>
                     </div>
 
-                    <div class="form-group" ng-if="configDataElement.activeRecordNew">
-                        <button class="btn btn-primary" ng-click="configDataElement.addRecord()">Add</button>
-                        <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>                        
-                    </div>
-
-                    <div ng-if="!configDataElement.activeRecordNew">
+                    <div class="form-group">
                         <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
                         <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>
                     </div>
+
+
                 </div>
             </div>
         </div>
