Organizations Module - tidying up, adding remove.

--- a/modules/organizations/client/views/new-organization.client.view.html
+++ b/modules/organizations/client/views/new-organization.client.view.html
@@ -11,107 +11,7 @@
 
             <div class="panel-body">
 
-                <form name="organizationForm" ng-submit="addOrganization.submitOrganization(organizationForm.$valid)" novalidate>
-
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group show-errors">
-                                        <label for="company" class="control-label">Company (Doing Business As)</label>
-                                        <input type="text" id="company" name="company" class="form-control" ng-model="addOrganization.organization.company" placeholder="Company (Doing Business As)" required />
-                                        <div ng-messages="organizationForm.company.$error" role="alert">
-                                            <p class="help-block error-text" ng-message="required">Company is required.</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="website" class="control-label">Website</label>
-                                        <input type="text" id="website" name="website" class="form-control" ng-model="addOrganization.organization.website" placeholder="Website" required />
-                                        <div ng-messages="organizationForm.website.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="companyLegal" class="control-label">Company Legal Name</label>
-                                        <input type="text" id="companyLegal" name="companyLegal" class="form-control" ng-model="addOrganization.organization.companyLegal" placeholder="Company Legal Name" required />
-                                        <div ng-messages="organizationForm.companyLegal.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="registeredIn" class="control-label">Registered In</label>
-                                        <select class="form-control input-sm" ng-model="addOrganization.organization.registeredIn" ng-options="key as value for (key, value) in addOrganization.provs"></select>
-                                        <div ng-messages="organizationForm.registeredIn.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="parentCompany" class="control-label">Parent Company (if applicable)</label>
-                                        <input type="text" id="parentCompany" name="parentCompany" class="form-control" ng-model="addOrganization.organization.parentCompany" placeholder="Parent Company (if applicable)" required />
-                                        <div ng-messages="organizationForm.parentCompany.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="companyType" class="control-label">Company Type</label>
-                                        <select id="companytype" ng-model='uco.type' class="form-control input-sm">
-                                            <option value="public">Publically Traded</option>
-                                            <option value="private">Privately Owned</option>
-                                        </select>
-                                        <div ng-messages="organizationForm.companyType.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="address1" class="control-label">Address (Line 1)</label>
-                                        <input type="text" id="address1" name="address1" class="form-control" ng-model="addOrganization.organization.address1" placeholder="Address (Line 1)" required />
-                                        <div ng-messages="organizationForm.address1.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="address2" class="control-label">Address (Line 2)</label>
-                                        <input type="text" id="address2" name="address2" class="form-control" ng-model="addOrganization.organization.address2" placeholder="Address (Line 2)" required />
-                                        <div ng-messages="organizationForm.address2.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="city" class="control-label">City</label>
-                                        <input type="text" id="city" name="city" class="form-control" ng-model="addOrganization.organization.city" placeholder="City" required />
-                                        <div ng-messages="organizationForm.city.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="province" class="control-label">Province</label>
-                                        <select class="form-control input-sm" ng-model="addOrganization.organization.province" ng-options="key as value for (key, value) in addOrganization.provs"></select>
-                                        <div ng-messages="organizationForm.province.$error" role="alert">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group show-errors">
-                                        <label for="postal" class="control-label">Postal</label>
-                                        <input type="text" id="postal" name="postal" class="form-control" ng-model="addOrganization.organization.postal" placeholder="Postal" required />
-                                        <div ng-messages="organizationForm.postal.$error" role="alert">
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
-                            </div>
-
-
-                            <div class="text-right">
-                                <div class="form-group">
-                                    <input type="submit" value="Add Organization" class="btn btn-default" >
-                                </div>
-
-                                <div ng-show="error" class="text-danger">
-                                    <strong ng-bind="error"></strong>
-                                </div>
-                            </div>
-                </form>
+                <tmpl-organizations-display-edit options="{{addOrganization.options}}"></tmpl-organizations-display-edit>
 
             </div>
         </div>
