--- a/modules/organizations/client/views/organizations-partials/organization-display-edit-form.html
+++ b/modules/organizations/client/views/organizations-partials/organization-display-edit-form.html
@@ -2,7 +2,8 @@
 
     <form name="displayEdit.organizationForm" ng-submit="displayEdit.submit(organizationForm.$valid)" novalidate>
         <div class="row">
-            <div class="col-sm-6">
+
+            <div class="col-sm-4">
                 <div class="form-group show-errors">
                     <label for="company" class="control-label">Company (Doing Business As)</label>
 
@@ -10,84 +11,87 @@
                     <div ng-messages="displayEdit.organizationForm.company.$error" role="alert">
                         <p class="help-block error-text" ng-message="required">Company is required.</p>
                     </div>
-
                     <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.company"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="website" class="control-label">Website</label>
-                    <input type="text" id="website" name="website" class="form-control" ng-model="displayEdit.organization.website" placeholder="Website" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="website" name="website" class="form-control" ng-model="displayEdit.organization.website" placeholder="Website" required />
                     <div ng-messages="displayEdit.organizationForm.website.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.website"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="companyLegal" class="control-label">Company Legal Name</label>
-                    <input type="text" id="companyLegal" name="companyLegal" class="form-control" ng-model="displayEdit.organization.companyLegal" placeholder="Company Legal Name" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="companyLegal" name="companyLegal" class="form-control" ng-model="displayEdit.organization.companyLegal" placeholder="Company Legal Name" required />
                     <div ng-messages="displayEdit.organizationForm.companyLegal.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.companyLegal"/>
                 </div>
+            </div>
 
-                <div class="form-group show-errors">
-                    <label for="registeredIn" class="control-label">Registered In</label>
-                    <select class="form-control input-sm" ng-model="displayEdit.organization.registeredIn" ng-options="key as value for (key, value) in editOrganization.provs"></select>
-                    <div ng-messages="displayEdit.organizationForm.registeredIn.$error" role="alert">
-                    </div>
-                </div>
-
+            <div class="col-sm-4">
                 <div class="form-group show-errors">
                     <label for="parentCompany" class="control-label">Parent Company (if applicable)</label>
-                    <input type="text" id="parentCompany" name="parentCompany" class="form-control" ng-model="displayEdit.organization.parentCompany" placeholder="Parent Company (if applicable)" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="parentCompany" name="parentCompany" class="form-control" ng-model="displayEdit.organization.parentCompany" placeholder="Parent Company (if applicable)" required />
                     <div ng-messages="displayEdit.organizationForm.parentCompany.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.parentCompany"/>
                 </div>
 
                 <div class="form-group show-errors">
                     <label for="companyType" class="control-label">Company Type</label>
-                    <select id="companytype" ng-model='organization.companyType' class="form-control input-sm">
-                        <option value="public">Publically Traded</option>
-                        <option value="private">Privately Owned</option>
-                    </select>
+                    <select ng-if="displayEdit.options.mode != 'display'" class="form-control input-sm" ng-model="displayEdit.organization.companyType" ng-options="key as value for (key, value) in displayEdit.companyTypes"></select>
                     <div ng-messages="displayEdit.organizationForm.companyType.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.companyTypes[displayEdit.organization.companyType]"/>
                 </div>
 
+
+                <div class="form-group show-errors">
+                    <label for="registeredIn" class="control-label">Registered In</label>
+                    <select ng-if="displayEdit.options.mode != 'display'" class="form-control input-sm" ng-model="displayEdit.organization.registeredIn" ng-options="key as value for (key, value) in displayEdit.provs"></select>
+                    <div ng-messages="displayEdit.organizationForm.registeredIn.$error" role="alert">
+                    </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.provs[displayEdit.organization.registeredIn]"/>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
                 <div class="form-group show-errors">
                     <label for="address1" class="control-label">Address (Line 1)</label>
-                    <input type="text" id="address1" name="address1" class="form-control" ng-model="displayEdit.organization.address1" placeholder="Address (Line 1)" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="address1" name="address1" class="form-control" ng-model="displayEdit.organization.address1" placeholder="Address (Line 1)" required />
                     <div ng-messages="displayEdit.organizationForm.address1.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.address1"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="address2" class="control-label">Address (Line 2)</label>
-                    <input type="text" id="address2" name="address2" class="form-control" ng-model="displayEdit.organization.address2" placeholder="Address (Line 2)" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="address2" name="address2" class="form-control" ng-model="displayEdit.organization.address2" placeholder="Address (Line 2)" required />
                     <div ng-messages="displayEdit.organizationForm.address2.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.address2"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="city" class="control-label">City</label>
-                    <input type="text" id="city" name="city" class="form-control" ng-model="displayEdit.organization.city" placeholder="City" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="city" name="city" class="form-control" ng-model="displayEdit.organization.city" placeholder="City" required />
                     <div ng-messages="displayEdit.organizationForm.city.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.city"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="province" class="control-label">Province</label>
-                    <select class="form-control input-sm" ng-model="displayEdit.organization.province" ng-options="key as value for (key, value) in editOrganization.provs"></select>
+                    <select ng-if="displayEdit.options.mode != 'display'" class="form-control input-sm" ng-model="displayEdit.organization.province" ng-options="key as value for (key, value) in displayEdit.provs"></select>
                     <div ng-messages="displayEdit.organizationForm.province.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.provs[displayEdit.organization.province]"/>
                 </div>
-
                 <div class="form-group show-errors">
                     <label for="postal" class="control-label">Postal</label>
-                    <input type="text" id="postal" name="postal" class="form-control" ng-model="displayEdit.organization.postal" placeholder="Postal" required />
+                    <input ng-if="displayEdit.options.mode != 'display'" type="text" id="postal" name="postal" class="form-control" ng-model="displayEdit.organization.postal" placeholder="Postal" required />
                     <div ng-messages="displayEdit.organizationForm.postal.$error" role="alert">
                     </div>
+                    <p ng-if="displayEdit.options.mode == 'display'" ng-bind="displayEdit.organization.postal"/>
                 </div>
-
-
             </div>
 
         </div>
@@ -95,10 +99,10 @@
 
         <div class="text-right">
             <div class="form-group">
-                <button type="submit" class="btn btn-default button-sm " ><span class="glyphicon glyphicon-floppy-disk"></span> Save</button>
-                <button type="button" class="btn btn-default button-sm" ui-sref="view({organizationId: organization._id})" ><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-                <button class="btn btn-default btn-danger" ng-click="remove();"><i class="glyphicon glyphicon-trash"></i> Delete</button>
-                <button class="btn btn-default btn-small" ui-sref="edit({organizationId: displayEdit.organization._id})"><i class="glyphicon glyphicon-edit"></i> Edit</button>
+                <button ng-if="displayEdit.options.mode != 'display'" type="submit" class="btn btn-default button-sm " ><span class="glyphicon glyphicon-floppy-disk"></span> Save</button>
+                <button ng-if="displayEdit.options.mode != 'display'" type="button" class="btn btn-default button-sm" ng-click="displayEdit.cancel();" ><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                <button ng-if="displayEdit.options.mode == 'edit'" class="btn btn-default btn-danger" ng-click="displayEdit.remove();"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+                <button ng-if="displayEdit.options.mode == 'display'" class="btn btn-default btn-small" ui-sref="edit({organizationId: displayEdit.organization._id})"><i class="glyphicon glyphicon-edit"></i> Edit</button>
             </div>
 
             <div ng-show="error" class="text-danger">
