--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -12,19 +12,18 @@
 			</div>
 		</div>
 
-		<tmpl-projects-map id="anchor-map" x-projects='projects.projects'></tmpl-projects-map>
-
-		<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
-
-
-<embed height="800" width="100%" src="https://msit.powerbi.com/view?r=eyJrIjoiOWNkOWNiMTktMTA0Ni00Zjc2LWE0ODItZGU0NWRjOGYyOWRlIiwidCI6IjcyZjk4OGJmLTg2ZjEtNDFhZi05MWFiLTJkN2NkMDExZGI0NyIsImMiOjV9&showLogoBar=false">
-
-		<div x-window-height>
-			<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>			
+		<div class="row">
+			<div class="col-lg-6">
+				<tmpl-projects-map id="anchor-map" x-projects='projects.projects'></tmpl-projects-map>
+			</div>
+			<div class="col-lg-6">
+				<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
+			</div>
 		</div>
 
-
-
+		<div x-window-height>
+			<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>
+		</div>
 
 	</div>
 	<div class='col-sm-2'>
