--- a/modules/configuration/client/views/partials/manage-activities.html
+++ b/modules/configuration/client/views/partials/manage-activities.html
@@ -54,6 +54,7 @@
                         </select>
                     </div>
 
+
                     <div class="form-group">
                         <a href
                             class="control-label pull-right"
@@ -72,8 +73,12 @@
                             <li ng-repeat="task in configDataElement.activeRecord.tasks track by $index"><em class="small text-success">task:</em>&nbsp;{{ task.name }}</li>
                         </ul>
 
+
                     </div>
 
+                    <div class="form-group">
+                        <a href modal-permission-matrix x-target-object="configDataElement.activeRecord">Permissions</a>
+                    </div>
 
                     <div class="form-group">
                         <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
