--- a/modules/configuration/client/views/partials/manage-phases.html
+++ b/modules/configuration/client/views/partials/manage-phases.html
@@ -80,6 +80,10 @@
                     </div>
 
                     <div class="form-group">
+                        <a href modal-permission-matrix x-target-object="configDataElement.activeRecord">Permissions</a>
+                    </div>
+
+                    <div class="form-group">
                         <button class="btn btn-primary" ng-click="configDataElement.saveRecord()">Save</button>
                         <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>
                     </div>
