--- a/modules/configuration/client/views/partials/manage-topics.html
+++ b/modules/configuration/client/views/partials/manage-topics.html
@@ -63,10 +63,8 @@
                         </div>
                     </div>
 
-
-                    <div class="form-group" ng-if="configDataElement.activeRecordNew">
-                        <button class="btn btn-primary" ng-click="configDataElement.addRecord()">Add</button>
-                        <button class="btn btn-default" ng-click="configDataElement.cancelRecord()">Cancel</button>                        
+                    <div class="form-group">
+                        <a href modal-permission-matrix x-target-object="configDataElement.activeRecord">Permissions</a>
                     </div>
 
                     <div ng-if="!configDataElement.activeRecordNew">
