--- a/modules/roles/client/views/partials/modal-permission-matrix.html
+++ b/modules/roles/client/views/partials/modal-permission-matrix.html
@@ -2,12 +2,12 @@
 	<h3 class="modal-title">Manage Permissions for {{ targetObject.name }}</h3>
 </div>
 <div class="modal-body">
-	
+
 	<table class="table table-condensed table-striped table-hover">
 		<thead>
 			<tr>
 				<th width="40%">System Role</th>
-				<th width="20%" ng-repeat="key in permMatrix.keys"  class="text-center">{{ key | titleCase}}</th>
+				<th width="20%" ng-repeat="key in permMatrix.keys"  class="text-center">{{ key | titleCase }}</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -17,7 +17,7 @@
 					ng-repeat="key in permMatrix.keys"
 					class="text-center"
 					ng-click="permMatrix.togglePermission(role.code, key)"
-					ng-class="{'success': (permMatrix.permissions|accessHasRole:role.code:key)}">
+					ng-class="{'success': (permMatrix.permissions|accessHasRole:role.code:key), 'info': (permMatrix.permissions|accessInferredRole:role.code:key)}">
 
 					<span ng-show="permMatrix.permissions|accessHasRole:role.code:key"
 						 class="text-success glyphicon glyphicon-ok"></span>
@@ -28,10 +28,10 @@
 				</td>
 			</tr>
 		</tbody>
-	</table>	
+	</table>
 
 </div>
 <div class="modal-footer">
-	<button class="btn btn-default" type="button" ng-click="permMatrix.ok()">Save</button>
 	<button class="btn btn-warning" type="button" ng-click="permMatrix.cancel()">Cancel</button>
+	<button class="btn btn-default" type="button" ng-click="permMatrix.ok()">OK</button>
 </div>
